--- a/Conservapp/Conservapp/Conservapp.Android/Properties/AndroidManifest.xml
+++ b/Conservapp/Conservapp/Conservapp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.conservapp" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="30" />
-	<application android:label="Conservapp.Android" android:theme="@style/MainTheme"></application>
+	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-feature android:name="android.hardware.location.gps" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.LOCATION_HARDWARE" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="Conservapp.Android" android:theme="@style/MainTheme" android:allowBackup="false" android:fullBackupContent="false">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyDNkBwUvNOKKiqYP1gLtQkcIddIduzoKJI" />
+    <uses-library
+        android:name="com.google.android.maps"
+        android:required="true" />
+	</application>
 </manifest>
