--- a/Conservapp/Conservapp/Conservapp/Conservapp.csproj
+++ b/Conservapp/Conservapp/Conservapp/Conservapp.csproj
@@ -6,10 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.1.1" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />  
-    <PackageReference Include="Xamarin.Forms.Maps" Version="4.7.0.1351" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="4.7.0.1351" />  
+    <PackageReference Include="ZXing.Net.Mobile" Version="2.3.1" />  
+    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.2.8" />
   </ItemGroup>
 
   <ItemGroup>
