--- a/Conservapp/Conservapp/Conservapp/Conservapp.csproj
+++ b/Conservapp/Conservapp/Conservapp/Conservapp.csproj
@@ -6,13 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Acr.UserDialogs" Version="7.1.0.514" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.1.1" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />  
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />  
     <PackageReference Include="Xamarin.Forms.Maps" Version="4.7.0.1351" />  
-    <PackageReference Include="ZXing.Net.Mobile" Version="2.3.1" />  
-    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.2.8" />
+    <PackageReference Include="ZXing.Net.Mobile" Version="2.3.2" />  
+    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
