--- a/Conservapp/Conservapp/Conservapp.Android/Conservapp.Android.csproj
+++ b/Conservapp/Conservapp/Conservapp.Android/Conservapp.Android.csproj
@@ -63,6 +63,9 @@
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Media">
+      <Version>4.0.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms.Maps">
