--- a/Conservapp/Conservapp/Conservapp.Android/Properties/AndroidManifest.xml
+++ b/Conservapp/Conservapp/Conservapp.Android/Properties/AndroidManifest.xml
@@ -10,6 +10,8 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<application android:label="Conservapp.Android" android:theme="@style/MainTheme" android:allowBackup="false" android:fullBackupContent="false">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyDNkBwUvNOKKiqYP1gLtQkcIddIduzoKJI" />
 		<uses-library android:name="com.google.android.maps" android:required="true" />
